--- a/package.json
+++ b/package.json
@@ -9,16 +9,41 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "react": "^19.0.0",
-    "react-dom": "^19.0.0",
-    "next": "15.3.5"
+    "@next-auth/supabase-adapter": "^0.2.1",
+    "@react-pdf/renderer": "^4.3.0",
+    "@sendgrid/mail": "^8.1.5",
+    "@supabase/auth-helpers-nextjs": "^0.10.0",
+    "@supabase/auth-helpers-react": "^0.5.0",
+    "@supabase/supabase-js": "^2.51.0",
+    "csv-stringify": "^6.5.2",
+    "html2canvas": "^1.4.1",
+    "jspdf": "^3.0.1",
+    "libxmljs2": "^0.37.0",
+    "lucide-react": "^0.525.0",
+    "next": "15.3.5",
+    "next-auth": "^4.24.11",
+    "node-forge": "^1.3.1",
+    "nodemailer": "^6.10.1",
+    "openai": "^5.9.0",
+    "papaparse": "^5.5.3",
+    "pdfkit": "^0.17.1",
+    "react": "19.0.0",
+    "react-csv": "^2.2.2",
+    "react-dom": "19.0.0",
+    "recharts": "^3.0.2",
+    "stream-buffers": "^3.0.3",
+    "strong-soap": "^4.1.14",
+    "xml-crypto": "^6.1.2",
+    "xmlbuilder2": "^3.1.1"
   },
   "devDependencies": {
-    "typescript": "^5",
-    "@types/node": "^20",
-    "@types/react": "^19",
-    "@types/react-dom": "^19",
-    "@tailwindcss/postcss": "^4",
-    "tailwindcss": "^4"
+    "@tailwindcss/postcss7-compat": "^4.1.11",
+    "@types/node": "^20.0.0",
+    "@types/react": "^19.0.0",
+    "@types/react-dom": "^19.0.0",
+    "autoprefixer": "^10.4.2",
+    "postcss": "^8.4.6",
+    "tailwindcss": "^3.1.8",
+    "typescript": "^5.1.6"
   }
 }
