--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "dev": "next dev --turbopack",
+    "dev": "next dev",
     "build": "next build",
     "start": "next start",
     "lint": "next lint"
@@ -37,13 +37,12 @@
     "xmlbuilder2": "^3.1.1"
   },
   "devDependencies": {
-    "@tailwindcss/postcss7-compat": "^4.1.11",
     "@types/node": "^20.0.0",
     "@types/react": "^19.0.0",
     "@types/react-dom": "^19.0.0",
     "autoprefixer": "^10.4.2",
     "postcss": "^8.4.6",
-    "tailwindcss": "^3.1.8",
+    "tailwindcss": "^3.4.0",
     "typescript": "^5.1.6"
   }
 }
