--- a/package.json
+++ b/package.json
@@ -5,22 +5,12 @@
   "scripts": {
     "dev": "next dev",
     "build": "next build",
-    "start": "next start",
-    "lint": "next lint"
+    "start": "next start"
   },
   "dependencies": {
-    "@next-auth/supabase-adapter": "^0.2.1",
-    "@next/font": "^14.2.15",
-    "@radix-ui/react-slot": "^1.2.3",
-    "@react-pdf/renderer": "^4.3.0",
-    "@sendgrid/mail": "^8.1.5",
-    "@supabase/auth-helpers-nextjs": "^0.10.0",
-    "@supabase/auth-helpers-react": "^0.5.0",
     "@supabase/supabase-js": "^2.51.0",
     "class-variance-authority": "^0.7.1",
-    "cldrjs": "^0.5.5",
     "clsx": "^2.1.1",
-    "crypto-browserify": "^3.12.1",
     "csv-stringify": "^6.5.2",
     "globalize": "^1.7.0",
     "google-fonts": "^1.0.0",
@@ -35,9 +25,9 @@
     "papaparse": "^5.5.3",
     "path-browserify": "^1.0.1",
     "pdfkit": "^0.17.1",
-    "react": "19.0.0",
+    "react": "18.2.0",
     "react-csv": "^2.2.2",
-    "react-dom": "19.0.0",
+    "react-dom": "18.2.0",
     "recharts": "^3.0.2",
     "stream-browserify": "^3.0.0",
     "stream-buffers": "^3.0.3",
@@ -46,12 +36,13 @@
     "tailwindcss-animate": "^1.0.7",
     "xml-crypto": "^2.0.0",
     "xml-js": "^1.6.11",
-    "xmlbuilder2": "^3.1.1"
+    "xmlbuilder2": "^3.1.1",
+    "date-fns": "^2.30.0"
   },
   "devDependencies": {
     "@types/node": "^20.0.0",
-    "@types/react": "^19.0.0",
-    "@types/react-dom": "^19.0.0",
+    "@types/react": "^18.0.0",
+    "@types/react-dom": "^18.0.0",
     "autoprefixer": "^10.4.21",
     "postcss": "^8.5.6",
     "tailwindcss": "^3.4.17",
