--- a/package.json
+++ b/package.json
@@ -8,11 +8,14 @@
     "start": "next start"
   },
   "dependencies": {
+    "@supabase/auth-helpers-nextjs": "^0.10.0",
+    "@supabase/auth-helpers-react": "^0.5.0",
     "@supabase/supabase-js": "^2.51.0",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
-    "crypto-browserify": "^3.12.0",
+    "crypto-browserify": "^3.12.1",
     "csv-stringify": "^6.5.2",
+    "date-fns": "^2.30.0",
     "globalize": "^1.7.0",
     "google-fonts": "^1.0.0",
     "html2canvas": "^1.4.1",
@@ -21,6 +24,7 @@
     "next": "15.3.5",
     "next-auth": "^4.24.11",
     "node-forge": "^1.3.1",
+    "node-polyfill-webpack-plugin": "^4.1.0",
     "nodemailer": "^6.10.1",
     "openai": "^5.9.0",
     "papaparse": "^5.5.3",
@@ -37,8 +41,7 @@
     "tailwindcss-animate": "^1.0.7",
     "xml-crypto": "^2.0.0",
     "xml-js": "^1.6.11",
-    "xmlbuilder2": "^3.1.1",
-    "date-fns": "^2.30.0"
+    "xmlbuilder2": "^3.1.1"
   },
   "devDependencies": {
     "@types/node": "^20.0.0",
@@ -50,4 +53,3 @@
     "typescript": "^5.1.6"
   }
 }
-
