--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "@supabase/auth-helpers-nextjs": "^0.10.0",
     "@supabase/auth-helpers-react": "^0.5.0",
     "@supabase/supabase-js": "^2.51.0",
+    "buffer": "^6.0.3",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "crypto-browserify": "^3.12.1",
@@ -39,6 +40,7 @@
     "strong-soap": "^4.1.14",
     "tailwind-merge": "^3.3.1",
     "tailwindcss-animate": "^1.0.7",
+    "util": "^0.12.5",
     "xml-crypto": "^2.0.0",
     "xml-js": "^1.6.11",
     "xmlbuilder2": "^3.1.1"
