fix: bump date-fns to v3 and add react-date-range

--- a/package.json
+++ b/package.json
@@ -19,7 +19,7 @@
     "clsx": "^2.1.1",
     "crypto-browserify": "^3.12.1",
     "csv-stringify": "^6.5.2",
-    "date-fns": "^2.30.0",
+    "date-fns": "^3.0.0",
     "globalize": "^1.7.0",
     "google-fonts": "^1.0.0",
     "html2canvas": "^1.4.1",
@@ -36,6 +36,7 @@
     "pdfkit": "^0.17.1",
     "react": "18.2.0",
     "react-csv": "^2.2.2",
+    "react-date-range": "^2.0.1",
     "react-dom": "18.2.0",
     "react-icons": "^5.5.0",
     "recharts": "^3.0.2",
