fix: add stripe dependencies

--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "@headlessui/react": "^2.2.6",
     "@heroicons/react": "^2.2.0",
     "@react-pdf/renderer": "^4.3.0",
+    "@stripe/stripe-js": "^7.7.0",
     "@supabase/auth-helpers-nextjs": "^0.10.0",
     "@supabase/auth-helpers-react": "^0.5.0",
     "@supabase/supabase-js": "^2.51.0",
@@ -43,6 +44,7 @@
     "recharts": "^3.0.2",
     "stream-browserify": "^3.0.0",
     "stream-buffers": "^3.0.3",
+    "stripe": "^18.3.0",
     "strong-soap": "^4.1.14",
     "tailwind-merge": "^3.3.1",
     "tailwindcss-animate": "^1.0.7",
