--- a/package.json
+++ b/package.json
@@ -42,6 +42,7 @@
     "react-dom": "18.2.0",
     "react-icons": "^5.5.0",
     "recharts": "^3.0.2",
+    "soap": "^1.2.1",
     "stream-browserify": "^3.0.0",
     "stream-buffers": "^3.0.3",
     "stripe": "^18.3.0",
