--- a/package.json
+++ b/package.json
@@ -52,6 +52,7 @@
     "util": "^0.12.5",
     "xml-crypto": "^2.0.0",
     "xml-js": "^1.6.11",
+    "xml2js": "^0.6.2",
     "xmlbuilder2": "^3.1.1"
   },
   "devDependencies": {
