--- a/package.json
+++ b/package.json
@@ -50,10 +50,11 @@
     "tailwind-merge": "^3.3.1",
     "tailwindcss-animate": "^1.0.7",
     "util": "^0.12.5",
-    "xml-crypto": "^2.0.0",
+    "xml-crypto": "^2.1.6",
     "xml-js": "^1.6.11",
     "xml2js": "^0.6.2",
-    "xmlbuilder2": "^3.1.1"
+    "xmlbuilder2": "^3.1.1",
+    "xmldom": "^0.6.0"
   },
   "devDependencies": {
     "@types/axios": "^0.9.36",
