--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "google-fonts": "^1.0.0",
     "html2canvas": "^1.4.1",
     "jspdf": "^3.0.1",
+    "jspdf-autotable": "^5.0.2",
     "lucide-react": "^0.525.0",
     "next": "15.3.5",
     "next-auth": "^4.24.11",
