--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@supabase/supabase-js": "^2.51.0",
     "axios": "^1.11.0",
     "buffer": "^6.0.3",
+    "chart.js": "^4.5.0",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "crypto-browserify": "^3.12.1",
@@ -38,6 +39,7 @@
     "path-browserify": "^1.0.1",
     "pdfkit": "^0.17.1",
     "react": "18.2.0",
+    "react-chartjs-2": "^5.3.0",
     "react-csv": "^2.2.2",
     "react-date-range": "^2.0.1",
     "react-dom": "18.2.0",
