--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "start": "next start"
   },
   "dependencies": {
-    "@headlessui/react": "^2.2.6",
+    "@headlessui/react": "^2.2.7",
     "@heroicons/react": "^2.2.0",
     "@react-pdf/renderer": "^4.3.0",
     "@stripe/stripe-js": "^7.7.0",
@@ -44,6 +44,7 @@
     "react-date-range": "^2.0.1",
     "react-dom": "18.2.0",
     "react-icons": "^5.5.0",
+    "react-qr-code": "^2.0.18",
     "recharts": "^3.0.2",
     "soap": "^1.2.1",
     "stream-browserify": "^3.0.0",
