--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
     "papaparse": "^5.5.3",
     "path-browserify": "^1.0.1",
     "pdfkit": "^0.17.1",
+    "qrcode": "^1.5.4",
     "react": "18.2.0",
     "react-chartjs-2": "^5.3.0",
     "react-csv": "^2.2.2",
